--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -27,6 +27,7 @@ rules:
   import/prefer-default-export: 0
   react/jsx-props-no-spreading: 0
   react/destructuring-assignment: 0
+  react/require-default-props: 0
   react/no-danger: 0
   arrow-parens: 0
   react/react-in-jsx-scope: 0
