--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "cedit",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "repository": "git@github.com:hiukky/cedit.git",
   "author": "Romullo <developermarsh@gmail.com>",
-  "main": "dist/index.js",
+  "description": "📝 A simple way to edit content in react.",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
@@ -11,14 +14,11 @@
     "build-storybook": "build-storybook",
     "test": "jest",
     "prebuild": "rimraf dist",
-    "build": "esbuild index.ts --bundle --minify --sourcemap --outfile=dist/index.js",
-    "postbuild": "tsc -p tsconfig.build.json",
+    "build": "rollup -c",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@storybook/addon-actions": "^6.4.19",
@@ -34,7 +34,6 @@
     "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "babel-loader": "^8.2.3",
     "esbuild": "^0.14.24",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -42,14 +41,19 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "postcss": "^8.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
+    "rollup": "^2.69.0",
+    "rollup-plugin-dts": "^4.2.0",
+    "rollup-plugin-esbuild": "^4.8.2",
+    "rollup-plugin-postcss": "^4.0.2",
     "styled-components": "^5.3.3",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
@@ -57,5 +61,19 @@
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "html",
+    "html5",
+    "slim",
+    "input",
+    "react",
+    "editable",
+    "contenteditable",
+    "content editable",
+    "react-hooks"
+  ]
 }
