--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-esbuild": "^4.8.2",
     "rollup-plugin-postcss": "^4.0.2",
+    "storybook-addon-sass-postcss": "^0.1.0",
     "styled-components": "^5.3.3",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
