--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -28,10 +28,12 @@ rules:
   jsx-a11y/control-has-associated-label: 0
   object-curly-newline: 0
   no-param-reassign: 0
+  implicit-arrow-linebreak: 0
   import/prefer-default-export: 0
   react/jsx-props-no-spreading: 0
   react/destructuring-assignment: 0
   react/require-default-props: 0
+  react/jsx-one-expression-per-line: 0
   react/no-danger: 0
   arrow-parens: 0
   react/react-in-jsx-scope: 0
