--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -28,6 +28,7 @@ rules:
   jsx-a11y/control-has-associated-label: 0
   object-curly-newline: 0
   no-param-reassign: 0
+  '@typescript-eslint/indent': 0
   implicit-arrow-linebreak: 0
   import/prefer-default-export: 0
   react/jsx-props-no-spreading: 0
@@ -35,6 +36,7 @@ rules:
   react/require-default-props: 0
   react/jsx-one-expression-per-line: 0
   react/no-danger: 0
+  no-continue: 0
   arrow-parens: 0
   react/react-in-jsx-scope: 0
   react/prop-types: 0
