refactor: design structure and component renaming

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "test": "jest",
     "prebuild": "rimraf dist",
     "build": "rollup -c",
-    "predeploy": "npm run build-storybook",
-    "deploy-storybook": "gh-pages -d storybook-static",
+    "sb:server": "start-storybook -p 6006",
+    "sb:build": "npm run build-storybook",
+    "sb:deploy": "gh-pages -d storybook-static",
+    "test": "jest",
+    "test:cov": "jest --coverage --watchAll",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
@@ -38,7 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "add": "^2.0.6",
-    "esbuild": "^0.14.24",
+    "esbuild": "^0.14.25",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -55,7 +55,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.69.0",
+    "rollup": "^2.69.2",
     "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-esbuild": "^4.8.2",
     "rollup-plugin-filesize": "^9.1.2",
