--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "add": "^2.0.6",
+    "autoprefixer": "^10.4.2",
     "esbuild": "^0.14.25",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
