--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -27,6 +27,7 @@ rules:
   import/no-extraneous-dependencies: 0
   jsx-a11y/control-has-associated-label: 0
   object-curly-newline: 0
+  operator-linebreak: 0
   no-param-reassign: 0
   '@typescript-eslint/indent': 0
   implicit-arrow-linebreak: 0
