--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,11 @@
-node_modules
-storybook-static
-coverage
-.husky
 .github
+.husky
 .storybook
+assets
+coverage
+node_modules
 src
+storybook-static
 .eslintignore
 .eslintrc.yml
 .commitlintrc
