--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
+    "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
@@ -31,32 +31,32 @@
     "@storybook/addon-links": "^6.4.19",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
-    "@testing-library/react": "^12.1.3",
+    "@testing-library/react": "^12.1.4",
     "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.39",
+    "@types/react": "^17.0.41",
     "@types/styled-components": "^5.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "add": "^2.0.6",
-    "autoprefixer": "^10.4.2",
-    "esbuild": "^0.14.25",
-    "eslint": "^8.10.0",
+    "autoprefixer": "^10.4.4",
+    "esbuild": "^0.14.27",
+    "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.69.2",
+    "rollup": "^2.70.1",
     "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-esbuild": "^4.8.2",
     "rollup-plugin-filesize": "^9.1.2",
@@ -65,7 +65,7 @@
     "styled-components": "^5.3.3",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2",
-    "yarn": "^1.22.17"
+    "yarn": "^1.22.18"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -83,6 +83,8 @@
     "editable",
     "contenteditable",
     "content editable",
-    "react-hooks"
+    "react-hooks",
+    "react-contenteditable",
+    "react-content-editable"
   ]
 }
